--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "supabase": "^1.183.5"
   },
