--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "website-clone",
+  "name": "andr3wm",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,13 +19,16 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "draft-js": "^0.11.7",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mui": "^0.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.24.1",
+    "setimmediate": "^1.0.5",
     "supabase": "^1.183.5"
   },
   "devDependencies": {
