--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.24.1",
     "setimmediate": "^1.0.5",
     "supabase": "^1.183.5"
