--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.16.7",
     "@mui/styled-engine": "^5.16.6",
     "@supabase/supabase-js": "^2.44.3",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -31,6 +32,7 @@
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.24.1",
     "setimmediate": "^1.0.5",
+    "speed-insights": "github:vercel/speed-insights",
     "supabase": "^1.183.5",
     "yet-another-react-lightbox": "^3.21.4"
   },
